style fixes, enable dark mode, dark mode control

--- a/src/components/ConversationPreview/ConversationPreview.scss
+++ b/src/components/ConversationPreview/ConversationPreview.scss
@@ -1,5 +1,4 @@
 .ConversationPreview {
 	grid-area: preview;
 	margin: 0.5em;
-	border: black 1px;
 }
