--- a/src/components/JoinRoomPrompt/JoinRoomPrompt.scss
+++ b/src/components/JoinRoomPrompt/JoinRoomPrompt.scss
@@ -5,6 +5,6 @@
 	}
 
 	input {
-		font-family: 'Nanum Gothic' !important;
+		font-family: 'Nanum Gothic';
 	}
 }
